--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>talamonso.net</groupId>
 	<artifactId>omapi-dhcp</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<name>omapi dhcp</name>
 	<description>java interface to omapi</description>
 	<packaging>bundle</packaging>
@@ -10,7 +10,7 @@
 	<scm>
 		<connection>scm:git:https://github.com/BabisK/omapi-dhcp.git</connection>
 		<developerConnection>scm:git:https://github.com/BabisK/omapi-dhcp.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>v0.0.3</tag>
 		<url>https://github.com/BabisK/omapi-dhcp.git</url>
 	</scm>
 
